--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,16 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+
     <title>GitHub Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
-    <script src="https://kit.fontawesome.com/6bf5a1110b.js" crossorigin="anonymous"></script>
+
+    <script
+      src="https://kit.fontawesome.com/6bf5a1110b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
